--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#">Ingresar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Registrarse</a>
+            <a class="nav-link" href="{{ url_for('register_page') }}">Registrarse</a>
           </li>
         </ul>
       </div>
