--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -8,6 +8,7 @@
   <body class="text-center">
     <div class="container">
       <form method="POST" class="form-register" style="color: aliceblue;">
+        {{ form.hidden_tag() }}
         <img 
           class="mb-4 h-25 w-25 mt-3" 
           src="https://cdn.icon-icons.com/icons2/1526/PNG/512/screencart_106583.png" 
