--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -38,7 +38,7 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Ingresar</a>
+            <a class="nav-link" href="{{ url_for('login_page') }}">Ingresar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('register_page') }}">Registrarse</a>
@@ -46,6 +46,22 @@
         </ul>
       </div>
     </nav>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}">
+            <button 
+              type="button" 
+              class="ml-2 mb-1 close" 
+              data-dismiss="alert" 
+              aria-label="Cerrar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     {% block content %} {% endblock %}
     <!-- futuro contenido aqui -->
 
