--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -36,14 +36,32 @@
             <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
           </li>
         </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('login_page') }}">Ingresar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('register_page') }}">Registrarse</a>
-          </li>
-        </ul>
+        {% if current_user.is_authenticated %}
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" style="color: lawngreen; font-weight: bold">
+                <i class="fas fa-coins"></i>
+                {{ current_user.prettier_budget }}
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link">Biemvenido, {{ current_user.usuario }}</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('logout_page') }}">Salir</a>
+            </li>
+          </ul>
+        {% else %}
+          <ul class="navbar-nav">
+           <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('login_page') }}">Ingresar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('register_page') }}">Registrarse</a>
+            </li>
+          </ul>
+        {% endif %}
+        
       </div>
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %}
