--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -4,29 +4,52 @@
 {% endblock %}
 
 {% block content %}
-    <table class="table table-hover table-dark">
+  <div class="row" style="margin-top: 30px; margin-left: 20px;">
+    <div class="col-8">
+      <h2>Articulos disponibles en el Market</h2>
+      <p>Click en uno de los Articulos para comprar</p>
+      <br />
+      <table class="table table-hover table-dark">
         <thead>
-        <tr>
+          <tr>
             <th scope="col">ID</th>
             <th scope="col">Nombre</th>
             <th scope="col">Barcode</th>
             <th scope="col">Precio</th>
             <th scope="col">Opciones</th>
-        </tr>
+          </tr>
         </thead>
-        <tbody>
+      <tbody>
         {% for item in items %}
-            <tr>
-                <td>{{ item.id }}</td>
-                <td>{{ item.nombre }}</td>
-                <td>{{ item.barcode }}</td>
-                <td>$ {{ item.precio }}</td>
-                <td>
-                    <button class="btn btn-outline btn-info">Mas Info</button>
-                    <button class="btn btn-outline btn-success">Comprar</button>
-                </td>
-            </tr>
+          {% include 'includes/items_modals.html' %}
+          <tr>
+            <td>{{ item.id }}</td>
+            <td>{{ item.nombre }}</td>
+            <td>{{ item.barcode }}</td>
+            <td>$ {{ item.precio }}</td>
+            <td>
+              <button 
+                class="btn btn-outline btn-info" 
+                data-toggle="modal" 
+                data-target="#Modal-MoreInfo-{{ item.id }}">
+                Mas Info
+              </button>
+              <button 
+                class="btn btn-outline btn-success" 
+                data-toggle="modal" 
+                data-target="#Modal-PurchaseConfirm-{{ item.id }}">
+                Comprar
+              </button>
+            </td>
+          </tr>
         {% endfor %}
         </tbody>
-    </table>
+      </table>
+    </div>
+    <div class="col-4">
+      <h2>Articulos</h2>
+      <p>Click en vender para retornarlo al Market</p>
+      <br />
+    </div>
+  </div>
 {% endblock %}
