--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -6,6 +6,7 @@
 {% block content %}
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark" style="color: azure;">
     <div class="col-md5 p-lg-5 mx-auto my-5">
+      <img class="h-25 w-25 mt-1" src="https://cdn.icon-icons.com/icons2/1526/PNG/512/screencart_106583.png" alt="img del market">
       <h1 class="display-4 font-weight-normal">PolDiaz Market</h1>
       <p class="lead font-weight-normal">Comience sus compras de productos haciendo click en el link</p>
       <a href="{{ url_for("market_page") }}" class="btn btn-primary">Empezar a Comprar¡</a>
