--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -5,6 +5,7 @@
 
 {% block content %}
   <div class="row" style="margin-top: 30px; margin-left: 20px;">
+    <img class="h-25 w-25 mt-1" src="https://cdn.icon-icons.com/icons2/1526/PNG/512/screencart_106583.png" alt="img del market">
     <div class="col-8">
       <h2>Articulos disponibles en el Market</h2>
       <p>Click en uno de los Articulos para comprar</p>
@@ -48,8 +49,29 @@
     </div>
     <div class="col-4">
       <h2>Articulos</h2>
-      <p>Click en vender para retornarlo al Market</p>
+      <p>Click en Devolver para retornarlo al Market</p>
       <br />
+      <div class="row">
+        {% for owned_item in owned_items %}
+        {% include 'includes/owned_items_modals.html' %}
+          <div class="col-md-6">
+            <div class="card text-center bg-dark" style="margin-bottom: 5px">
+              <div class="card-body">
+                <h5 class="card-title">{{ owned_item.nombre }}</h5>
+                <button 
+                  type="button" 
+                  class="btn btn-outline-danger" 
+                  style="margin-bottom: 5px" 
+                  data-toggle="modal" 
+                  data-target="#Modal-SellingConfirm-{{ owned_item.id }}">
+                  Devolver este Articulo
+                </button>
+                <p class="card-text"><strong>El valor de este articulo es: {{ owned_item.precio }}$</strong></p>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
     </div>
   </div>
 {% endblock %}
